# assignment1-basics

./: .gitignore  README.md  generate.py  pyproject.toml  train.py  train_bpe.py
cs336_basics/: config.py  data.py  generate.py  loss.py  model.py  optim.py  tokenizer.py  train_bpe.py  train_engine.py  utils.py  utils_bpe.py  utils_train.py
cs336_basics/modules/: __init__.py  attention.py  embedding.py  ffn.py  linear.py  moe.py  norm.py  rope.py
tests/: adapters.py
